--- a/PHP/PHP_1_basic/index.html
+++ b/PHP/PHP_1_basic/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta content="IE=edge">
-	<title>GitHub 이해하기</title>
+	<title>PHP 기본문법</title>
 	<style media="screen">
 		.main-wrapper div img {
 			width: 100%;
