--- a/PHP/PHP_mysql/index.html
+++ b/PHP/PHP_mysql/index.html
@@ -146,6 +146,9 @@
 		if (pageNum === 1) {
 			document.getElementById('button_1').textContent = ' ';
 		}
+		if (pageNum === lastpageNum) {
+			document.getElementById('button_2').textContent = ' ';
+		}
 	</script>
 </body>
 </html>
