--- a/PHP/PHP_programming/index.html
+++ b/PHP/PHP_programming/index.html
@@ -4,149 +4,122 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta content="IE=edge">
 	<title>PHP 프로그래밍 기초</title>
 	<style media="screen">
-		.main-wrapper div img {
-			width: 100%;
+		* {
+			margin: 0;
+			padding: 0;
 		}
-		.main-wrapper div {
-			margin: 0 auto;
+
+		.main-wrapper {
+			display: block;
 			width: 100%;
 			background-color: black;
 			text-align: center;
-			position: relative;
-		}
-		.main-wrapper div span {
 			color: #ffffff;
-		  font-size: 2em;
+			font-size: 2em;
 		}
-		#nowpage {
-			width: 10%;
+
+		.main-wrapper img {
+			width: 100%;
 		}
-		.toolbar {
-			overflow: hidden;
-			text-align: center;
-		}
-		.nav {
+
+		.main-wrapper a {
 			display: inline-block;
+			width: 30px;
 		}
-		#back{
-			display: inline-block;
+
+		.pagebutton {
+			display: inline;
+			height: 57vw;
 			width: 50%;
-			margin: 0;
-			padding: 0;
-			background-color: red;
-			height: 100%;
-			position: absolute;
-			top:0;
-			left:0;
 			opacity: 0;
 		}
-		#front{
-			display: inline-block;
-			margin: 0;
-			padding: 0;
-			background-color: blue;
-			height: 100%;
-			width: 50%;
+
+		#back {
 			position: absolute;
-			top:00%;
-			left:50%;
-			opacity: 0;
+			top: 0;
+			left: 0;
+			background-color: #000;
+
 		}
-		#slideimgNext{
-			width: 1px;
+
+		#front {
+			position: absolute;
+			top: 0%;
+			left: 50%;
+			background-color: #333;
+		}
+
+		#slideimgNext {
+			width: 0px;
 		}
 	</style>
 </head>
 
 <body>
-	<header>
-		<div class="header-contents">
-		</div><!-- /.header-contents -->
-	</header>
 
 	<div class="main-wrapper">
-			<div>
-				<img src="1.PNG" alt="" id="slideimg">
-				<div id="back">0</div>
-				<div id="front">0</div>
-			</div>
-			<div class="toolbar">
-				<span><a id="button_1">
-						< </a>
-			  </span>
-				<span id="nowpage"> 1 </span>
-				<span><a id="button_2">
-						>
-					</a>
-				</span>
-			</div>
-			<img src="2.PNG" alt="" id="slideimgNext">
-	</div><!-- /.main-wrapper -->
+		<img src="1.PNG" alt="" id="slideimg">
+		<img src="2.PNG" alt="" id="slideimgNext">
+		<div id="back" class="pagebutton"></div>
+		<div id="front" class="pagebutton"></div>
+		<a id="button_1"></a>
+		<span id="nowpage"> 1 </span>
+		<a id="button_2"> > </a>
+	</div>
 
+	<h1>PHP 프로그래밍 기초</h1>
 	<footer>
-		<h1>PHP 프로그래밍 기초</h1>
 		<h2>2019.04.02. 작성됨</h2>
 		*2019.04.13. 제목/일부태그 수정
+		<h3>작성자: yongseok.web@gmail.com</h3>
 	</footer>
 
-	<script type="text/javascript">
+	<script>
 		var pageNum = 1;
 		var lastpageNum = 16;
+
 		var slideimg = document.getElementById('slideimg');
-		var back = document.querySelector('#back');
+		var back = document.getElementById('back');
 		var front = document.getElementById('front');
-		var thumbs_1 = document.querySelector('#button_1');
-		var thumbs_2 = document.querySelector('#button_2');
-		front.onclick = function() {
-			if (pageNum === lastpageNum) {
-				document.getElementById('button_2').textContent = ' ';
-			}
-			else {
-				document.getElementById('slideimg').src = (pageNum + 1) + '.PNG';
+		var bu1 = document.getElementById('button_1');
+		var bu2 = document.getElementById('button_2');
+		if (pageNum === 1) {
+			bu1.textContent = ' ';
+		}
+		var work = function(aa) {
+			if (aa === 1 && pageNum < lastpageNum) {
+				slideimg.src = (pageNum + 1) + '.PNG';
 				document.getElementById('slideimgNext').src = (pageNum + 2) + '.PNG';
+				bu1.textContent = '<';
 				pageNum++;
-				document.getElementById('nowpage').textContent = pageNum;
-				document.getElementById('button_1').textContent = '<';
-				imagePreload( (pageNum + 2) + '.PNG' );
+			} else if (aa === 2 && 1 < pageNum) {
+				slideimg.src = (pageNum - 1) + '.PNG';
+				bu2.textContent = '>';
+				pageNum--;
 			}
-		};
-		thumbs_2.onclick = function() {
-			document.getElementById('slideimg').src = (pageNum + 1) + '.PNG';
-			document.getElementById('slideimgNext').src = (pageNum + 2) + '.PNG';
-			pageNum++;
-			document.getElementById('nowpage').textContent = pageNum;
-			document.getElementById('button_1').textContent = '<';
-			imagePreload( (pageNum + 2) + '.PNG' );
+			if (pageNum === 1) {
+				bu1.textContent = ' ';
+			}
 			if (pageNum === lastpageNum) {
-				document.getElementById('button_2').textContent = ' ';
+				bu2.textContent = ' ';
 			}
+			document.getElementById('nowpage').textContent = pageNum;
+		};
+		front.onclick = function() {
+			work(1)
+		};
+		bu2.onclick = function() {
+			work(1)
 		};
 		back.onclick = function() {
-			if (pageNum === 1) {
-				document.getElementById('button_1').textContent = ' ';
-			}
-			else {
-				document.getElementById('slideimg').src = (pageNum - 1) + '.PNG';
-				pageNum--;
-				document.getElementById('nowpage').textContent = pageNum;
-				document.getElementById('button_2').textContent = '>';
-			}
+			work(2)
 		};
-		thumbs_1.onclick = function() {
-			document.getElementById('slideimg').src = (pageNum - 1) + '.PNG';
-			pageNum--;
-			document.getElementById('nowpage').textContent = pageNum;
-			if (pageNum === 1) {
-				document.getElementById('button_1').textContent = ' ';
-			}
-			document.getElementById('button_2').textContent = '>';
-		}
-		if (pageNum === 1) {
-			document.getElementById('button_1').textContent = ' ';
-		}
+		bu1.onclick = function() {
+			work(2)
+		};
 	</script>
 </body>
+
 </html>
