--- a/PHP/PHP_mysql/index.html
+++ b/PHP/PHP_mysql/index.html
@@ -38,6 +38,11 @@
 		#front{
 			position: absolute;
 			top:0%;
+			width: 500px;
+			display: inline-block;
+			display: inline-block;
+			position: relative;
+			position: absolute;
 			left:50%;
 			background-color: #333;
 		}
@@ -48,7 +53,6 @@
 </head>
 
 <body>
-
 	<div class="main-wrapper">
 		<img src="1.PNG" alt="" id="slideimg">
 		<img src="2.PNG" alt="" id="slideimgNext">
