--- a/PHP/PHP_mysql/index.html
+++ b/PHP/PHP_mysql/index.html
@@ -38,7 +38,7 @@
 		#front{
 			position: absolute;
 			top:0%;
-			width: 500px;
+			width: 50%;
 			display: inline-block;
 			display: inline-block;
 			position: relative;
